// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxAndLabel /> should match snapshot 1`] = `
Array [
  <div
    className="inputGroup"
  >
    <label
      className="labelText"
      htmlFor="password"
    >
      password
      <input
        className="input"
        data-testid="password"
        id="password"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
  </div>,
  <div
    className="inputGroup"
  >
    <label
      className="labelText"
      htmlFor="confirm"
    >
      Confirm Password:
      <input
        className="input"
        data-testid="confirm-password"
        name="confirm"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
  </div>,
]
`;

exports[`<ConfirmPassword /> should match snapshot 1`] = `
Array [
  <div
    className="inputGroup"
  >
    <label
      className="labelText"
      htmlFor="password"
    >
      Password
      <input
        className="input"
        data-testid="password"
        id="password"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
  </div>,
  <div
    className="inputGroup"
  >
    <label
      className="labelText"
      htmlFor="confirm"
    >
      Confirm Password:
      <input
        className="input"
        data-testid="confirm-password"
        name="confirm"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
  </div>,
]
`;
